<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_set_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg_select"
    tools:context="com.example.sweetgirl.magiccup1.activity.MySetAboutActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar2"
        android:background="@color/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/text_page"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="160dp"
            tools:ignore="RtlHardcoded" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/icon_72"
        android:id="@+id/imageView3"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/version"
        android:textSize="18sp"
        android:textColor="@color/text_page"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_marginTop="68dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="4dp"
            android:layout_height="20dp"
            android:layout_marginLeft="180dp"
            android:background="@color/tips"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:text="@string/public_number"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textColor="@color/text_page"
            android:id="@+id/textView7"
            tools:ignore="RtlHardcoded" />

        </LinearLayout>

    <TextView
        android:text="@string/app_number"
        android:textSize="14sp"
        android:textColor="@color/text_page"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/textView8" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="4dp"
            android:layout_height="20dp"
            android:layout_marginLeft="180dp"
            android:background="@color/tips"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:text="@string/product"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:textColor="@color/text_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            tools:ignore="RtlHardcoded" />
        </LinearLayout>

    <TextView
        android:text="@string/content"
        android:textSize="14sp"
        android:textColor="@color/text_page"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10" />
</LinearLayout>
