<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_gift_scene2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg_my"
    tools:context="com.example.sweetgirl.magiccup1.activity.MyGiftScene2Activity">

    <include layout="@layout/my_gift_scene2_toolbar"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/weather"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/toolbar"
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/text_view_shape"
            tools:ignore="RtlHardcoded"
            android:id="@+id/scene2_tv_weather" />
        <TextView
            android:text="@string/background"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/text_p"
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/text_view_shape"
            tools:ignore="RtlHardcoded"
            android:id="@+id/scene2_tv_background" />

        <TextView
            android:text="@string/scene"
            android:textSize="16sp"
            android:textColor="@color/text_p"
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/text_view_shape"
            android:gravity="center"
            tools:ignore="RtlHardcoded"
            android:id="@+id/scene2_tv_scene" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/dep_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="ObsoleteLayoutParam,UselessLeaf">

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <com.example.sweetgirl.magiccup1.ui.recycler.RefreshRecyclerView
        android:id="@+id/scene2_recycler_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
